# wizlight

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.playwright-cli/: page-2026-04-04T21-38-47-295Z.yml  page-2026-04-05T20-42-50-465Z.yml  page-2026-04-05T21-11-13-649Z.yml  page-2026-04-05T21-19-51-737Z.yml
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
docs/: alexa-setup.md
output/video-check/: captures.txt
output/video-check/dNwxvuR41gw/: scene_report.json
output/video-verify/video/: verification_report.json
scripts/: calibrate_bulb_camera.py  clap_toggle.py  color_preset.py  debug_mic.py  diagnose_bulb.py  list_mics.py  network_diagnostic.py  sync_screen.py  test_clap.py  verify_video_color_mapping.py
skills/wiz_config/: control_light.py  fetch_docs.py  skill.md
src/: __init__.py
src/cli/: commands.py
src/core/: __init__.py  async_runtime.py  bulb_controller.py  calibration.py  color_mapping.py  config.py
src/features/: __init__.py  alexa_bridge.py  clap_detector.py  screen_sync.py  screen_sync_v2.py  websocket_server.py
src/gui/: __main__.py  app.py  modern_app.py
src/gui/components/: __init__.py  animations.py  color_wheel.py  dashboard.py  smooth_scrollable_frame.py  tray.py
tests/: __init__.py  test_async_runtime.py  test_bulb_controller.py  test_calibration.py  test_cli.py  test_config.py  test_features.py
wizlight-android/: README.md  pubspec.yaml
wizlight-android/test/: tablet_sync_test.dart
(+4 files in other folders)
